<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SPLASH</string>
    <string name="hello_world">Virtuellt sällskapsspel</string>
    <string name="action_settings">Settings</string>

    <!-- Behöver bytas varje gång vi byter app namn (app ID) -->
    <string name="metaioSDKSignature">SFfoqzgN+TONhKGN0eq9O0W2yX67KmbRKfXutYN+Yf8=</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_network">NetworkActivity</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="network_text_connect">Connect to a game</string>
    <string name="network_text_host">....or create a game</string>
    <string name="lobby_text_connect">Lobby</string>
    <string name="startGame">Start game</string>
    <string name="toLobby">To Lobby</string>
    <string name="Huvudmeny">Main menu</string>
    <string name="Spelmusik">Game music</string>
    <string name="Lobby">Lobby</string>
    <string name="title_activity_game_ended">GameEndedActivity</string>
    <string name="end_result">Result</string>
    <string name="red_player">Red player </string>
    <string name="blue_player">Blue player</string>
    <string name="green_player">Green player</string>
    <string name="yellow_player">Yellow player</string>
    <string name="magenta_player">Pink player</string>
    <string name="network_button_create_game">Create game</string>
    <string name="play_again">Play again</string>
    <string name="connect_to_game">connect to game</string>
    <string name="marker">View the marker</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="BTN_CONTINUE">Continue</string>
    <string name="title_activity_marker">MarkerActivity</string>

</resources>
